# AURA

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
software/behavior/: README.md  behavior_base.py  behavior_context.py  behavior_events.py  behavior_manager.py  behavior_registry.py  behavior_types.py  behaviors.py  constants.py
software/brain/: README.md  __init__.py  brain_config.py  brain_context.py  brain_events.py  brain_exceptions.py  brain_manager.py  brain_result.py  constants.py  conversation_context.py  conversation_manager.py  knowledge_service.py  prompt_manager.py  provider_registry.py  provider_selector.py  system_prompts.py  translation_service.py
software/core/: README.md  config.py  constants.py  event_bus.py  exceptions.py  lifecycle.py  logger.py  main.py  state_machine.py  timer.py
software/hardware/: README.md  __init__.py  battery_monitor.py  command_router.py  constants.py  device_registry.py  device_types.py  face_driver.py  hardware_config.py  hardware_context.py  hardware_events.py  hardware_exceptions.py  hardware_manager.py  led_driver.py  propeller_driver.py  serial_manager.py  servo_driver.py
software/intent/: README.md  clarification.py  confidence.py  fallback.py  intent_context.py  intent_engine.py  intent_exceptions.py  intent_matcher.py  intent_parser.py  intent_registry.py  intent_result.py  intent_types.py  natural_language.py  parameter_extractor.py  synonym_dictionary.py  utils.py  validator.py
software/memory/: README.md  __init__.py  constants.py  memory_config.py  memory_context.py  memory_events.py  (+7 more)
(+65 files in other folders)
