[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aura"
version = "0.1.0"
description = "AI Companion Robot"
authors = [
    {name = "Kavya Panu"}
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["software/tests"]
pythonpath = ["software"]
